syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "me.nexters.chopstatsapi.grpc";
option java_outer_classname = "UrlStatsProto";

package grpc;

message UrlStatsRequest {
  string short_url = 1;
}

message UrlClickStatsRequest {
  string short_url = 1;
  int32 week = 2;
}

message Platform {
  string short_url = 1;
  int32 mobile = 2;
  int32 browser = 3;
}

message Referer {
  string short_url = 1;
  string referer = 2;
  int32 count = 3;
}

message TotalCount {
  string short_url = 1;
  int32 total_count = 2;
}

message ClickCount {
  google.protobuf.Timestamp date = 1;
  int32 count = 2;
}

service UrlStatsService {
  rpc getPlatformCount (UrlStatsRequest) returns (Platform);
  rpc getRefererCount (UrlStatsRequest) returns (stream Referer);
  rpc getTotalCount (UrlStatsRequest) returns (TotalCount);
  rpc getClickCount (UrlClickStatsRequest) returns (stream ClickCount);
}
